--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:resume-builder": "node dist/resume-builder/server/server.mjs"
+    "serve:ssr:resume-builder": "node dist/resume-builder/server/server.mjs",
+    "storybook": "ng run resume-builder:storybook",
+    "build-storybook": "ng run resume-builder:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -36,7 +38,16 @@
     "@angular-devkit/build-angular": "^17.3.1",
     "@angular/cli": "^17.3.1",
     "@angular/compiler-cli": "^17.3.0",
+    "@chromatic-com/storybook": "^1.2.25",
+    "@compodoc/compodoc": "^1.1.23",
     "@ngxs/devtools-plugin": "^3.8.2",
+    "@storybook/addon-docs": "^8.0.5",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/angular": "^8.0.5",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -46,6 +57,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "storybook": "^8.0.5",
     "typescript": "~5.4.2"
   }
 }
