--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngxs/store": "^3.8.2",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
+    "immer": "^10.0.4",
     "jspdf": "^2.5.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.12.0",
