--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --browsers=ChromeHeadless",
+    "test:include": "ng test --browsers=ChromeHeadless --include",
+    "test:coverage": "npm run test:ci -- --no-watch --code-coverage",
     "serve:ssr:resume-builder": "node dist/resume-builder/server/server.mjs",
     "storybook": "ng run resume-builder:storybook",
     "build-storybook": "ng run resume-builder:build-storybook"
